syntax = "proto3";
package quorum.pb;
option go_package = "github.com/huo-ju/quorum/internal/pkg/pb";

enum TrxType {
  REQ_SIGN_POST       = 0; // request witness sign for post
  REQ_SIGN_AUTH       = 1; // request witness sign for auth
  REQ_SIGN_RESP_POST  = 2; // response requset withness sign
  REQ_SIGN_RESP_AUTH  = 3; // response request witness auth
  ADD_NEW_BLOCK       = 4; // new block created
  ADD_NEW_BLOCK_RESP  = 5; // response new block created
  REQ_NEXT_BLOCK      = 6; // request next block
  REQ_NEXT_BLOCK_RESP = 7; // response request next block
  PEER_ANNOUNCE       = 8; // announce I am online
}


enum ReqBlock {
	BLOCK_IN_TRX = 0; //block data in trx
	BLOCK_ON_TOP = 1; //top block, no new block, block in trx is empty
}

message TrxMsg {
  string TrxId = 1;
  string GroupId = 2;
  TrxType MsgType = 3;
  bytes Data = 4;
  string Sender = 5;
  int64 TimeStamp = 6;
  string Version = 7;
  string Pubkey = 8;
  bytes Sign = 9;
}

message Trx {
	TrxMsg Msg = 1;
	bytes Data = 2;
    repeated string Consensus = 3;
}

message ReqSign {
    bytes Datahash = 1;
    string Expiration = 2;
}

message ReqSignResp {
    string ReqTrxId = 1;
    string Requester = 2;
    string Witness = 3;
    bytes  Hash = 4;
    bytes WitnessSign = 5;
}


message ReqNextBlockResp {
    string Provider  = 1;
    string Requester = 2;
    ReqBlock Response = 3;
    string BlockId = 4;
    bytes  Block = 5;
}

message Block {
    string Cid = 1;
    string GroupId = 2;
	string PrevBlockId = 3;
	int64 BlockNum = 4;
	int64 Timestamp = 5;
	string Hash = 6;
	string PreviousHash = 7;
	string Producer = 8;
    string Signature = 9;
	repeated Trx Trxs = 10;
}

message NewBlock {
	string Producer = 1;
	string BlockId = 2; 
	bytes Data = 3; //the whole block
}

message NewBlockResp {
	string Producer = 1;
	string BlockId = 2;        
	string StorageProvider = 3;
}

message ReqNextBlock {
	string BlockId = 1; //block id
}

message GroupItem {
	string OwnerPubKey = 1;
	string GroupId = 2;       
	string GroupName = 3;
	int64 LastUpdate = 4;
	int64 LatestBlockNum = 5;
	string LatestBlockId = 6;
	Block GenesisBlock = 7;
}

message GroupContentItem {
	string TrxId = 1;
	string Publisher = 2;
	bytes Content = 3;
	int64 TimeStamp = 4;
}

message BlockListItem {
    string GroupId = 1;
    string UserId = 2;
    string OwnerPubkey = 3;
    string OwnerSign = 4;
    string Memo = 5;
    int64 TimeStamp = 6;
}
